# python-project-50

./: 5.cast  Makefile  README.md  ls  pyproject.toml  setup.cfg  task5.cast
.github/workflows/: pyci.yml
gendiff/: __init__.py  build_diff.py  parser_file.py
gendiff/formaters/: formater_json.py  formater_plain.py  formater_string.py  formater_stylish.py
gendiff/scripts/: __init__.py  build_diff.py  gendiff.py  parser_file.py
gendiff/tests/: test_generate_diff.py
gendiff/tests/fixtures/: file1.yml  right_test_gendiff.txt
